--- a/Style.css
+++ b/Style.css
@@ -225,7 +225,7 @@
 }
 .totop i{
   text-decoration: none;
-  color: #494949;
+  color: #818181;
 }
 .totop i:hover{
   color:rgb(39, 39, 39);
@@ -262,7 +262,12 @@
   color:#494949;
   margin: 1rem 0;
 }
+.buy-box{
+  height: 50px;
+  width: auto;
+}
 .product-size-button{
+  
   color: #000;
   border: 1px solid #000;
   font-size: 1rem;
@@ -286,25 +291,28 @@
   text-decoration: none;
   border-radius: 20px;
   font-size: 20px;
-  color: #494949;
+  color: white;
   font-family: Arial, Helvetica, sans-serif;
   border:1px solid #ccc7ce;
   width: 220px;
   line-height: 50px;
-  background-color: #ccc7ce;
-  margin-top: 15px;
+  background-color: #5cb85c;
+  margin: 15px;
   transition: 0.3s;
-}
-.buy-button a{
-  color: #000;
 }
 .buy-button i{
   padding-right: 6px;
 }
 .buy-button:hover{
- color:white;
- background-color:#5cb85c; 
+  color:white;
+ background-color:#418141; 
  transition: 0.3s;
+}
+.another-colors{
+  padding-top: 30px;
+}
+.another-colors p{
+  padding-top: 30px;
 }
 .footer{
   display: flex;
